fixing gaps

--- a/src/styles.css
+++ b/src/styles.css
@@ -309,7 +309,7 @@ footer a {
 
     .grid {
         grid-template-columns: 1fr !important;
-        grid-gap: 32px;
+        grid-gap: 20px;
     }
 
     section {
